--- a/tidy_data.html
+++ b/tidy_data.html
@@ -498,16 +498,12 @@ div.tocify {
 <h2>Example</h2>
 <p>I’ll keep using the same repo / project as in <a href="data_import.html">data import</a> and <a href="data_manipulation.html">data manipulation</a>, but create a new .Rmd for tidying. I’m also going to load some relevant packages, and limit the number of lines printed in a tibble.</p>
 <pre class="r"><code>library(tidyverse)
-## Warning: package &#39;tidyverse&#39; was built under R version 3.6.3
-## -- Attaching packages ---------------------------------------------------- tidyverse 1.3.0 --
-## v ggplot2 3.3.0     v purrr   0.3.2
-## v tibble  2.1.3     v dplyr   0.8.3
-## v tidyr   1.0.2     v stringr 1.4.0
-## v readr   1.3.1     v forcats 0.5.0
-## Warning: package &#39;ggplot2&#39; was built under R version 3.6.3
-## Warning: package &#39;tidyr&#39; was built under R version 3.6.3
-## Warning: package &#39;forcats&#39; was built under R version 3.6.3
-## -- Conflicts ------------------------------------------------------- tidyverse_conflicts() --
+## ── Attaching packages ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
+## ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
+## ✓ tibble  3.0.3     ✓ dplyr   1.0.2
+## ✓ tidyr   1.1.2     ✓ stringr 1.4.0
+## ✓ readr   1.3.1     ✓ forcats 0.5.0
+## ── Conflicts ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()
 
@@ -515,8 +511,10 @@ options(tibble.print_min = 5)</code></pre>
 <div id="pivot_longer" class="section level3">
 <h3><code>pivot_longer</code></h3>
 <p>In <a href="data_import.html">data import</a>, we used the <code>haven</code> package to load the PULSE biomarkers dataset from a .sas7bdat. Let’s reload those data and take a closer look:</p>
-<pre class="r"><code>pulse_data = haven::read_sas(&quot;./data/public_pulse_data.sas7bdat&quot;) %&gt;%
+<pre class="r"><code>pulse_data = 
+  haven::read_sas(&quot;./data/public_pulse_data.sas7bdat&quot;) %&gt;%
   janitor::clean_names()
+
 pulse_data
 ## # A tibble: 1,087 x 7
 ##      id   age sex   bdi_score_bl bdi_score_01m bdi_score_06m bdi_score_12m
@@ -526,7 +524,7 @@ pulse_data
 ## 3 10022  58.5 male            14             3             8            NA
 ## 4 10026  72.7 male            20             6            18            16
 ## 5 10035  60.4 male             4             0             1             2
-## # ... with 1,082 more rows</code></pre>
+## # … with 1,082 more rows</code></pre>
 <p>With our new understanding of tidy data, we quickly recognize a problem: the BDI score is spread across four columns, which correspond to four observation times. We can fix this problem using <code>pivot_longer</code>:</p>
 <pre class="r"><code>pulse_tidy_data = 
   pivot_longer(
@@ -544,7 +542,7 @@ pulse_tidy_data
 ## 3 10003  48.0 male  bdi_score_06m     2
 ## 4 10003  48.0 male  bdi_score_12m     0
 ## 5 10015  72.5 male  bdi_score_bl      6
-## # ... with 4,343 more rows</code></pre>
+## # … with 4,343 more rows</code></pre>
 <p>This looks much better! However, now <code>visit</code> is an issue. The original column names were informative but we probably don’t need to keep the <code>bdi_score_</code> prefix in each case. I’ll use an additional option in <code>pivot_longer</code> to address this:</p>
 <pre class="r"><code>pulse_tidy_data = 
   pivot_longer(
@@ -563,7 +561,7 @@ pulse_tidy_data
 ## 3 10003  48.0 male  06m       2
 ## 4 10003  48.0 male  12m       0
 ## 5 10015  72.5 male  bl        6
-## # ... with 4,343 more rows</code></pre>
+## # … with 4,343 more rows</code></pre>
 <p>In the preceding I’ve saved intermediate datasets to make each step clear. While this can be a helpful crutch as you’re trying out code, it is generally bad practice. There are also some additional transformations needed to wrap up the data wrangling process, like changing <code>bl</code> to <code>00m</code> for consistency across visits and converting <code>visit</code> to a factor variable. (It’s possible that you would want <code>visit</code> to be a numeric variable instead, which could be done with a different call to <code>mutate</code>.) Lastly, it’s nice to organize the data into a reasonable order.</p>
 <p>Altogether, then, the code below will import, tidy, and transform the PULSE dataset into a usable format:</p>
 <pre class="r"><code>pulse_data = 
@@ -574,7 +572,7 @@ pulse_tidy_data
     names_to = &quot;visit&quot;, 
     names_prefix = &quot;bdi_score_&quot;,
     values_to = &quot;bdi&quot;) %&gt;%
-  select(id, visit, everything()) %&gt;%
+  relocate(visit) %&gt;%
   mutate(
     visit = replace(visit, visit == &quot;bl&quot;, &quot;00m&quot;),
     visit = factor(visit, levels = str_c(c(&quot;00&quot;, &quot;01&quot;, &quot;06&quot;, &quot;12&quot;), &quot;m&quot;))) %&gt;%
@@ -582,76 +580,35 @@ pulse_tidy_data
 
 print(pulse_data, n = 12)
 ## # A tibble: 4,348 x 5
-##       id visit   age sex     bdi
-##    &lt;dbl&gt; &lt;fct&gt; &lt;dbl&gt; &lt;chr&gt; &lt;dbl&gt;
-##  1 10003 00m    48.0 male      7
-##  2 10003 01m    48.0 male      1
-##  3 10003 06m    48.0 male      2
-##  4 10003 12m    48.0 male      0
-##  5 10015 00m    72.5 male      6
-##  6 10015 01m    72.5 male     NA
-##  7 10015 06m    72.5 male     NA
-##  8 10015 12m    72.5 male     NA
-##  9 10022 00m    58.5 male     14
-## 10 10022 01m    58.5 male      3
-## 11 10022 06m    58.5 male      8
-## 12 10022 12m    58.5 male     NA
-## # ... with 4,336 more rows</code></pre>
-<p>Before moving on, let’s revisit the <code>group</code> variable in the litters dataset:</p>
-<pre class="r"><code>read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;% 
-  janitor::clean_names() %&gt;%
-  count(group) 
-## # A tibble: 6 x 2
-##   group     n
-##   &lt;chr&gt; &lt;int&gt;
-## 1 Con7      7
-## 2 Con8      8
-## 3 Low7      8
-## 4 Low8      7
-## 5 Mod7     12
-## 6 Mod8      7</code></pre>
-<p>These data are also untidy: <code>group</code> encodes both dose and day of treatment! Time to fix that …</p>
-<pre class="r"><code>litters_data = 
-  read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;% 
-  janitor::clean_names() %&gt;%
-  separate(group, into = c(&quot;dose&quot;, &quot;day_of_tx&quot;), sep = 3) %&gt;%
-  mutate(
-    dose = str_to_lower(dose),
-    wt_gain = gd18_weight - gd0_weight) %&gt;%
-  arrange(litter_number)
-
-litters_data
-## # A tibble: 49 x 10
-##   dose  day_of_tx litter_number gd0_weight gd18_weight gd_of_birth
-##   &lt;chr&gt; &lt;chr&gt;     &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;
-## 1 con   7         #1/2/95/2             27        42            19
-## 2 con   7         #1/5/3/83/3-~         NA        NA            20
-## 3 con   8         #1/6/2/2/95-2         NA        NA            20
-## 4 mod   7         #1/82/3-2             NA        NA            19
-## 5 low   8         #100                  20        39.2          20
-## # ... with 44 more rows, and 4 more variables: pups_born_alive &lt;int&gt;,
-## #   pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;, wt_gain &lt;dbl&gt;</code></pre>
+##    visit    id   age sex     bdi
+##    &lt;fct&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt; &lt;dbl&gt;
+##  1 00m   10003  48.0 male      7
+##  2 01m   10003  48.0 male      1
+##  3 06m   10003  48.0 male      2
+##  4 12m   10003  48.0 male      0
+##  5 00m   10015  72.5 male      6
+##  6 01m   10015  72.5 male     NA
+##  7 06m   10015  72.5 male     NA
+##  8 12m   10015  72.5 male     NA
+##  9 00m   10022  58.5 male     14
+## 10 01m   10022  58.5 male      3
+## 11 06m   10022  58.5 male      8
+## 12 12m   10022  58.5 male     NA
+## # … with 4,336 more rows</code></pre>
 <p>Now we’re in pretty okay shape :-).</p>
 <p><strong><em>Learning Assessment:</em></strong> In the litters data, the variables <code>gd0_weight</code> and <code>gd18_weight</code> give the weight of the mother mouse on gestational days 0 and 18. Write a data cleaning chain that retains only <code>litter_number</code> and these columns; produces new variables <code>gd</code> and <code>weight</code>; and makes <code>gd</code> a numeric variable taking values <code>0</code> and <code>18</code> (for the last part, you might want to use <code>recode</code> …). Is this version “tidy”?</p>
 <details>
 <p><summary> Solution </summary></p>
 <p>The code below shows one approach to this data cleaning process:</p>
-<pre class="r"><code>litters_data %&gt;% 
+<pre class="r"><code>litters_wide = 
+  read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;%
+  janitor::clean_names() %&gt;%
   select(litter_number, ends_with(&quot;weight&quot;)) %&gt;% 
   pivot_longer(
     gd0_weight:gd18_weight,
     names_to = &quot;gd&quot;, 
     values_to = &quot;weight&quot;) %&gt;% 
-  mutate(gd = recode(gd, &quot;gd0_weight&quot; = 0, &quot;gd18_weight&quot; = 18))
-## # A tibble: 98 x 3
-##   litter_number      gd weight
-##   &lt;chr&gt;           &lt;dbl&gt;  &lt;dbl&gt;
-## 1 #1/2/95/2           0     27
-## 2 #1/2/95/2          18     42
-## 3 #1/5/3/83/3-3/2     0     NA
-## 4 #1/5/3/83/3-3/2    18     NA
-## 5 #1/6/2/2/95-2       0     NA
-## # ... with 93 more rows</code></pre>
+  mutate(gd = recode(gd, &quot;gd0_weight&quot; = 0, &quot;gd18_weight&quot; = 18))</code></pre>
 <p>In one sense, this is “tidy” because I have a variable for day and a variable for weight rather that using values in my variable names. However, it’s less useful if I’m interested in computing or analyzing weight gain during pregnancy.</p>
 </details>
 </div>
@@ -683,7 +640,7 @@ analysis_result
 ##   &lt;chr&gt;     &lt;dbl&gt; &lt;dbl&gt;
 ## 1 treatment   4       8
 ## 2 placebo     3.5     4</code></pre>
-<p>We’re pretty much there now – in some cases you migth use <code>select</code> to reorder columns, and (depending on your goal) use <code>knitr::kable()</code> to produce a nicer table for reading.</p>
+<p>We’re pretty much there now – in some cases you might use <code>select</code> to reorder columns, and (depending on your goal) use <code>knitr::kable()</code> to produce a nicer table for reading.</p>
 </div>
 <div id="binding-rows" class="section level3">
 <h3>Binding rows</h3>
@@ -748,6 +705,7 @@ lotr_tidy
 </ul>
 <p>Left joins are the most common, because they add data from a smaller table <code>y</code> into a larger table <code>x</code> without removing anything from <code>x</code>.</p>
 <p>As an example, consider the data tables in <code>FAS_pups.csv</code> and <code>FAS_litters.csv</code>, which are related through the <code>Litter Number</code> variable. The former contains data unique to each pup, and the latter contains data unique to each litter. We can combine these using a left join of litter data into pup data; doing so retains data on each pup and adds data in new columns.</p>
+<p>(While revisiting this example, take a look at the <code>group</code> variable in the litters dataset: this encodes both dose and day of treatment! We’ll fix that bit of untidiness as part of the processing pipeline. I’m also going to address a pet peeve of mine, which is coding sex as an ambiguous numeric variable.)</p>
 <pre class="r"><code>pup_data = 
   read_csv(&quot;./data/FAS_pups.csv&quot;, col_types = &quot;ciiiii&quot;) %&gt;%
   janitor::clean_names() %&gt;%
@@ -756,25 +714,27 @@ lotr_tidy
 litter_data = 
   read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;%
   janitor::clean_names() %&gt;%
-  select(-pups_survive) %&gt;%
+  separate(group, into = c(&quot;dose&quot;, &quot;day_of_tx&quot;), sep = 3) %&gt;%
+  relocate(litter_number) %&gt;%
   mutate(
     wt_gain = gd18_weight - gd0_weight,
-    group = str_to_lower(group))
+    dose = str_to_lower(dose))
 
 fas_data = 
   left_join(pup_data, litter_data, by = &quot;litter_number&quot;)
+
 fas_data
-## # A tibble: 313 x 13
-##   litter_number sex   pd_ears pd_eyes pd_pivot pd_walk group gd0_weight
-##   &lt;chr&gt;         &lt;chr&gt;   &lt;int&gt;   &lt;int&gt;    &lt;int&gt;   &lt;int&gt; &lt;chr&gt;      &lt;dbl&gt;
-## 1 #85           male        4      13        7      11 con7        19.7
-## 2 #85           male        4      13        7      12 con7        19.7
-## 3 #1/2/95/2     male        5      13        7       9 con7        27  
-## 4 #1/2/95/2     male        5      13        8      10 con7        27  
-## 5 #5/5/3/83/3-3 male        5      13        8      10 con7        26  
-## # ... with 308 more rows, and 5 more variables: gd18_weight &lt;dbl&gt;,
-## #   gd_of_birth &lt;int&gt;, pups_born_alive &lt;int&gt;, pups_dead_birth &lt;int&gt;,
-## #   wt_gain &lt;dbl&gt;</code></pre>
+## # A tibble: 313 x 15
+##   litter_number sex   pd_ears pd_eyes pd_pivot pd_walk dose  day_of_tx
+##   &lt;chr&gt;         &lt;chr&gt;   &lt;int&gt;   &lt;int&gt;    &lt;int&gt;   &lt;int&gt; &lt;chr&gt; &lt;chr&gt;    
+## 1 #85           male        4      13        7      11 con   7        
+## 2 #85           male        4      13        7      12 con   7        
+## 3 #1/2/95/2     male        5      13        7       9 con   7        
+## 4 #1/2/95/2     male        5      13        8      10 con   7        
+## 5 #5/5/3/83/3-3 male        5      13        8      10 con   7        
+## # … with 308 more rows, and 7 more variables: gd0_weight &lt;dbl&gt;,
+## #   gd18_weight &lt;dbl&gt;, gd_of_birth &lt;int&gt;, pups_born_alive &lt;int&gt;,
+## #   pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;, wt_gain &lt;dbl&gt;</code></pre>
 <p>We made the key explicit in the join. By default, the <code>*_join</code> functions in <code>dplyr</code> will try to determine the key(s) based on variable names in the datasets you want to join. This is often but not always sufficient, and an extra step to make the key clear will help you and others reading your code.</p>
 <p>Note that joining is not particularly amenable to the <code>%&gt;%</code> operator because it is fundamentally non-linear: two separate datasets are coming together, rather than a single dataset being processed in a step-by-step fashion.</p>
 <p>As a final point, the <code>*_join</code> functions are very much related to SQL syntax, but emphasize operations common to data analysis.</p>
@@ -871,7 +831,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
