--- a/data_import.html
+++ b/data_import.html
@@ -488,7 +488,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/71pMVzk_KEE?start=0"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -500,7 +500,7 @@ div.tocify {
 <pre class="r"><code>library(tidyverse)
 ## ── Attaching packages ─────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
 ## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
-## ✓ tibble  3.0.1     ✓ dplyr   0.8.5
+## ✓ tibble  3.0.1     ✓ dplyr   1.0.2
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0
 ## ── Conflicts ────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
