--- a/tidy_data.html
+++ b/tidy_data.html
@@ -488,7 +488,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/CnRgc-2WVRU"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -498,12 +498,12 @@ div.tocify {
 <h2>Example</h2>
 <p>I’ll keep using the same repo / project as in <a href="data_import.html">data import</a> and <a href="data_manipulation.html">data manipulation</a>, but create a new .Rmd for tidying. I’m also going to load some relevant packages, and limit the number of lines printed in a tibble.</p>
 <pre class="r"><code>library(tidyverse)
-## ── Attaching packages ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
+## ── Attaching packages ──────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
 ## ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.3     ✓ dplyr   1.0.2
 ## ✓ tidyr   1.1.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0
-## ── Conflicts ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+## ── Conflicts ─────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()
 
@@ -644,7 +644,7 @@ analysis_result
 </div>
 <div id="binding-rows" class="section level3">
 <h3>Binding rows</h3>
-<p>We’ve looked at single-table non-tidy data, but non-tidiness often stems from relevant data spread across multiple tables. In the simplest case, these tables are basically the same and can be stacked to produce a tidy dataset. That’s the setting in <code>LotR_words.xlsx</code>, where the word counts for different races and sexes in each movie in the trilogy are spread across distinct data rectangles (these data are based on <a href="https://github.com/jennybc/lotr-tidy/blob/master/01-intro.md">this example</a>).</p>
+<p>We’ve looked at single-table non-tidy data, but non-tidiness often stems from relevant data spread across multiple tables. In the simplest case, these tables are basically the same and can be stacked to produce a tidy dataset. That’s the setting in <code>LotR_words.xlsx</code>, where the word counts for different races and genders in each movie in the trilogy are spread across distinct data rectangles (these data are based on <a href="https://github.com/jennybc/lotr-tidy/blob/master/01-intro.md">this example</a>).</p>
 <p>To produce the desired tidy dataset, we first need to read each table and do some cleaning.</p>
 <pre class="r"><code>fellowship_ring = 
   readxl::read_excel(&quot;./data/LotR_Words.xlsx&quot;, range = &quot;B3:D6&quot;) %&gt;%
@@ -664,14 +664,14 @@ return_king =
   janitor::clean_names() %&gt;%
   pivot_longer(
     female:male,
-    names_to = &quot;sex&quot;, 
+    names_to = &quot;gender&quot;, 
     values_to = &quot;words&quot;) %&gt;%
   mutate(race = str_to_lower(race)) %&gt;% 
   select(movie, everything()) 
 
 lotr_tidy
 ## # A tibble: 18 x 4
-##    movie           race   sex    words
+##    movie           race   gender words
 ##    &lt;chr&gt;           &lt;chr&gt;  &lt;chr&gt;  &lt;dbl&gt;
 ##  1 fellowship_ring elf    female  1229
 ##  2 fellowship_ring elf    male     971
